fix: nav bg alignment ✨

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -3,7 +3,6 @@
     padding: 0%;
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
-    max-width: 1200px;
 }
 
 a {
